--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -4,10 +4,10 @@
   margin: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
+html,
 body {
   overflow-x: hidden;
+  scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
 }
